--- a/web_flask/templates/7-states_list.html
+++ b/web_flask/templates/7-states_list.html
@@ -6,7 +6,7 @@
     <BODY>
         <H1>States</H1>
         <UL>
-            {% for state is states_list|sort(attribute="name") %}
+            {% for state in states_list|sort(attribute="name") %}
             <li>{{ state.id }}: <b>{{ state.name }}</b></li>
             {% endfor %}
         </UL>
