--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,10 +4,10 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-        {% if state }}
+        {% if states_list is define}}
             <H1>States</H1>
             <UL>
-                {% for state in states_list.values()|sort(attribute="name") %}
+                {% for state in states_list|sort(attribute="name") %}
                 <li>{{ state.id }}: <b>{{ state.name }}</b>
                     <UL>
                         {% for city in state.cities|sort(attribute="name") %}
@@ -17,7 +17,7 @@
                 </li>
                 {% endfor %}
             </UL>
-        {% elif %}
+        {% elif state is define %}
             <H1>State: {{ state.name }}</H1>
             <H3>Cities:</H3>
             <ul>
