--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -25,7 +25,7 @@
                     <li> {{city.id }}: <b>{{ city.name }}</b></li>
                 {% endfor %}
             </ul>
-        {% else &}
+        {% else %}
             <H1>Not found!</H1>
         {% endif %}
     </BODY>
