--- a/web_flask/templates/9-states.html
+++ b/web_flask/templates/9-states.html
@@ -4,7 +4,7 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-        {% if states_list is define %}
+        {% if states_list is defined %}
             <H1>States</H1>
             <UL>
                 {% for state in states_list|sort(attribute="name") %}
@@ -17,7 +17,7 @@
                 </li>
                 {% endfor %}
             </UL>
-        {% elif state is define %}
+        {% elif state is defined %}
             <H1>State: {{ state.name }}</H1>
             <H3>Cities:</H3>
             <ul>
