--- a/web_flask/templates/100-hbnb.html
+++ b/web_flask/templates/100-hbnb.html
@@ -47,7 +47,7 @@
 			</section>
 			<section class="places">
 				<h1>Places</h1>
-				{% for place in places %}
+				{% for place in places|sort(attribute="name") %}
 					<article>
 						<div class="headline">
 							<h2>{{ place.name }}</h2>
